--- a/test-scss/competition.html
+++ b/test-scss/competition.html
@@ -177,8 +177,8 @@
             <a class="filter-a f-14 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
                 aria-controls="nav-contact" aria-selected="false">ბიზნესი</a>
         </div>
-        <div class="drop-parent col-12 col-sm-6 col-md-3 mt-3 d-block d-md-none">
-            <div class=" dropdown-toggle w-100 drop d-flex align-items-center justify-content-between" type="button"
+        <div class="drop-parent col-12 col-sm-6 col-md-3 px-0 mt-3 d-block d-md-none">
+            <div class=" dropdown-toggle border w-100 drop d-flex align-items-center justify-content-between" type="button"
                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span>
                     ნებისმიერი
@@ -207,110 +207,115 @@
 
     </div>
 
-    <section class="popular__courses">
+    <section class="py-md-4 py-2">
         <div class="center">
             <div class="d-flex justify-content-between flex-wrap main courses__main row master-class">
-                <!-- for sale overlay add sale class to  block -->
                 <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
-                    <div class="d-flex flex-column inside__block">
+                    <div class="d-flex flex-column inside__block br-8 overflow-hidden">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
-                            <div class="img-block d-flex align-items-center pl-3">
-                                <img class="w-100" src="./img/Group 342.svg" alt="">
-                            </div>
-                            <img src="./img/face.svg" alt="">
+                            <img class="w-100" src="./img/comp.svg" alt="">
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
-                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
-                                <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების
+                            <div class="d-flex- flex-column px-md-4 px-3 mx-md-1 mx-0 mb-3">
+                                <div class="w-100 d-flex align-items-center justify-content-between">
+                                    <span class="f-14 c-light-text helvetica-55">ლოგო დიზაინ კონკურსი</span>
+                                    <div class="f-14 c-light-text mt-2 helvetica-55 d-none d-md-inline-block">
+                                        <span class=" helvetica-75 c-black bc-banner br-5 p-1">95</span>:<span
+                                            class=" helvetica-75 c-black bc-banner br-5 p-1">45</span>:<span
+                                            class=" helvetica-75 c-black bc-banner br-5 p-1">25</span>
+                                    </div>
+                                </div>
+                                <h1 class="f-20 mt-md-4 mt-3 c-black helvetica-75">ლოგო დიზაინის კონკურსი</h1>
+                                <span class="f-14 mt-4 d-none d-md-block c-card-text helvetica-55 mb-1">ტექნოლოგიების
                                     განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-                                    <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
-                                </div>
+                            <div class="bottom mt-3 d-flex align-items-center pb-3 pb-md-0  justify-content-end pr-3">
                                 <div class="right__side">
-                                    <button class=" helvetica-75 purple-hover-button">გაიგე მეტი</button>
-
+                                    <button class=" helvetica-75 purple-hover-button d-none d-md-flex">გაიგე მეტი</button>
+                                    <div class="f-14 c-light-text mt-2 helvetica-55 d-md-none d-inline-block">
+                                        <span class=" helvetica-75 c-black bc-banner br-5 p-1">95</span>:<span
+                                            class=" helvetica-75 c-black bc-banner br-5 p-1">45</span>:<span
+                                            class=" helvetica-75 c-black bc-banner br-5 p-1">25</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
-                    <div class="d-flex flex-column inside__block">
+                    <div class="d-flex flex-column inside__block br-8 overflow-hidden">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
-                            <div class="img-block d-flex align-items-center pl-3">
-                                <img class="w-100" src="./img/Group 342.svg" alt="">
-                            </div>
-                            <img src="./img/face.svg" alt="">
+                            <img class="w-100" src="./img/comp.svg" alt="">
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
-                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
-                                <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების
+                            <div class="d-flex- flex-column px-md-4 px-3 mx-md-1 mx-0 mb-3">
+                                <div class="w-100 d-flex align-items-center justify-content-between">
+                                    <span class="f-14 c-light-text helvetica-55">ლოგო დიზაინ კონკურსი</span>
+                                    <div class="f-14 c-light-text mt-2 helvetica-55 d-none d-md-inline-block">
+                                        <span class=" helvetica-75 c-black bc-banner br-5 p-1">95</span>:<span
+                                            class=" helvetica-75 c-black bc-banner br-5 p-1">45</span>:<span
+                                            class=" helvetica-75 c-black bc-banner br-5 p-1">25</span>
+                                    </div>
+                                </div>
+                                <h1 class="f-20 mt-md-4 mt-3 c-black helvetica-75">ლოგო დიზაინის კონკურსი</h1>
+                                <span class="f-14 mt-4 d-none d-md-block c-card-text helvetica-55 mb-1">ტექნოლოგიების
                                     განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-                                    <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
-                                </div>
+                            <div class="bottom mt-3 d-flex align-items-center pb-3 pb-md-0  justify-content-end pr-3">
                                 <div class="right__side">
-                                    <button class=" helvetica-75 yellow-hover-button">გაიგე მეტი</button>
-
+                                    <button class=" helvetica-75 yellow-hover-button d-none d-md-flex">გაიგე მეტი</button>
+                                    <div class="f-14 c-light-text mt-2 helvetica-55 d-md-none d-inline-block">
+                                        <span class=" helvetica-75 c-black bc-banner br-5 p-1">95</span>:<span
+                                            class=" helvetica-75 c-black bc-banner br-5 p-1">45</span>:<span
+                                            class=" helvetica-75 c-black bc-banner br-5 p-1">25</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
-                    <div class="d-flex flex-column inside__block">
+                    <div class="d-flex flex-column inside__block br-8 overflow-hidden">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
-                            <div class="img-block d-flex align-items-center pl-3">
-                                <img class="w-100" src="./img/Group 342.svg" alt="">
-                            </div>
-                            <img src="./img/face.svg" alt="">
+                            <img class="w-100" src="./img/comp.svg" alt="">
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
-                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
-                                <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
-                                <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
-                                <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების
+                            <div class="d-flex- flex-column px-md-4 px-3 mx-md-1 mx-0 mb-3">
+                                <div class="w-100 d-flex align-items-center justify-content-between">
+                                    <span class="f-14 c-light-text helvetica-55">ლოგო დიზაინ კონკურსი</span>
+                                    <div class="f-14 c-light-text mt-2 helvetica-55 d-none d-md-inline-block">
+                                        <span class=" helvetica-75 c-black bc-banner br-5 p-1">95</span>:<span
+                                            class=" helvetica-75 c-black bc-banner br-5 p-1">45</span>:<span
+                                            class=" helvetica-75 c-black bc-banner br-5 p-1">25</span>
+                                    </div>
+                                </div>
+                                <h1 class="f-20 mt-md-4 mt-3 c-black helvetica-75">ლოგო დიზაინის კონკურსი</h1>
+                                <span class="f-14 mt-4 d-none d-md-block c-card-text helvetica-55 mb-1">ტექნოლოგიების
                                     განვითარებამ
                                     შესაძლებელი გახადა, რომ სხვადასხვა
                                     პროფესიის ადამიანებმა თავად
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
-                            <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-                                    <span class="f-20 ml-3 helvetica-75 c-black like__remove">1250 ₾</span>
-                                </div>
+                            <div class="bottom mt-3 d-flex align-items-center pb-3 pb-md-0  justify-content-end pr-3">
                                 <div class="right__side">
-                                    <button class=" helvetica-75 purple-hover-button">გაიგე მეტი</button>
-
+                                    <button class=" helvetica-75 purple-hover-button d-none d-md-flex">გაიგე მეტი</button>
+                                    <div class="f-14 c-light-text mt-2 helvetica-55 d-md-none d-inline-block">
+                                        <span class=" helvetica-75 c-black bc-banner br-5 p-1">95</span>:<span
+                                            class=" helvetica-75 c-black bc-banner br-5 p-1">45</span>:<span
+                                            class=" helvetica-75 c-black bc-banner br-5 p-1">25</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -325,7 +330,7 @@
 
 
 
-    <div class="cart-menu active d-flex justify-content-end" id="cart-menu">
+    <div class="cart-menu  d-flex justify-content-end" id="cart-menu">
         <div class="cart-aside px-4 py-3">
             <div class="top d-flex justify-content-between">
                 <span class=" c-black f-20 helvetica-75">კალათა</span>
