--- a/test-scss/competition_1.html
+++ b/test-scss/competition_1.html
@@ -161,7 +161,7 @@
             </nav>
         </div>
     </section>
-    <div class="center mt-3">
+    <div class="center mt-4 py-1 mb-3">
         <a class="btn btn-light" href="competition.html">
             <img src="./img/back.svg" alt="">
             back</a>
@@ -190,7 +190,10 @@
                     ციფრული ინდუსტრიის აკადემია.შექმენი ციფრული ინდუსტრიის აკადემიის ლოგოს
                     რედიზაინი; ატვირთე ნამუშევარი ფეისბუქზე ან ინსტაგრამზე; გამოიყენე ჰეშთეგი
                     #logodigitaledu და მონიშნე ციფრული ინდუსტრიის აკადემია.</span>
-                <button class="d-block mx-auto mx-md-0 helvetica-75 blue-button mt-5">გაიგე მეტი</button>
+                <div class="pt-2">
+                    <button class="d-block mx-auto mx-md-0 helvetica-75 blue-button mt-4">გრეგისტრაცია</button>
+
+                </div>
             </div>
 
         </div>
@@ -202,42 +205,48 @@
 
 
 
-    <section class="prizes mt-5">
-        <div class="center">
-            <h1 class="f-20 c-black mt-2 helvetica-75">პრიზები</h1>
+    <section class="prizes pt-md-5 pt-0">
+        <div class="pt-md-4 pt-4 pb-5">
 
-            <div class="block mt-4 d-flex align-items-center flex-wrap justify-content-center justify-content-md-start">
-                <div class="blocks d-flex col-12 col-md-4 pl-0 mt-3 mt-md-0">
-                    <div class="left__side c-blue f-28 helvetica-55 bc-banner number d-flex justify-content-center align-items-center">
-                        1
-                    </div>
-                    <div class="right_side ml-2">
-                        <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
-                        <span class="f-14 d-block mt-3 c-light-text helvetica-55 col-10">პირველ ადგილზე გასული 
-                            მიიღებს უფასო კურსს.</span>
+            <div class="center">
+                <h1 class="f-20 c-black mt-2 helvetica-75">პრიზები</h1>
 
-                    </div>
-                </div>
-                <div class="blocks d-flex col-12 col-md-4 pl-0 mt-3 mt-md-0">
-                    <div class="left__side c-blue f-28 helvetica-55 bc-banner number d-flex justify-content-center align-items-center">
-                        1
-                    </div>
-                    <div class="right_side ml-2">
-                        <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
-                        <span class="f-14 d-block mt-3 c-light-text helvetica-55 col-10">პირველ ადგილზე გასული 
-                            მიიღებს უფასო კურსს.</span>
+                <div
+                    class="block mt-4 d-flex align-items-center flex-wrap justify-content-center justify-content-md-start">
+                    <div class="blocks mb-5 mb-md-0 d-flex col-12 col-md-4 pl-0 mt-3 mt-md-0">
+                        <div
+                            class="left__side c-blue f-28 helvetica-55 bc-banner number d-flex justify-content-center align-items-center">
+                            1
+                        </div>
+                        <div class="ml-3 pl-1 right_side">
+                            <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
+                            <span class="f-14 d-block mt-md-3 mt-2 c-light-text helvetica-55 col-md-10 col-12 px-0">პირველ ადგილზე გასული 
+                                მიიღებს უფასო კურსს.</span>
 
+                        </div>
                     </div>
-                </div>
-                <div class="blocks d-flex col-12 col-md-4 pl-0 mt-3 mt-md-0">
-                    <div class="left__side c-blue f-28 helvetica-55 bc-banner number d-flex justify-content-center align-items-center">
-                        1
-                    </div>
-                    <div class="right_side ml-2">
-                        <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
-                        <span class="f-14 d-block mt-3 c-light-text helvetica-55 col-10">პირველ ადგილზე გასული 
-                            მიიღებს უფასო კურსს.</span>
+                    <div class="blocks mb-5 mb-md-0 d-flex col-12 col-md-4 pl-0 mt-3 mt-md-0">
+                        <div
+                            class="left__side c-blue f-28 helvetica-55 bc-banner number d-flex justify-content-center align-items-center">
+                            1
+                        </div>
+                        <div class="ml-3 pl-1 right_side">
+                            <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
+                            <span class="f-14 d-block mt-md-3 mt-2 c-light-text helvetica-55 col-md-10 col-12 px-0">პირველ ადგილზე გასული 
+                                მიიღებს უფასო კურსს.</span>
 
+                        </div>
+                    </div>                    <div class="blocks mb-5 mb-md-0 d-flex col-12 col-md-4 pl-0 mt-3 mt-md-0">
+                        <div
+                            class="left__side c-blue f-28 helvetica-55 bc-banner number d-flex justify-content-center align-items-center">
+                            1
+                        </div>
+                        <div class="ml-3 pl-1 right_side">
+                            <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
+                            <span class="f-14 d-block mt-md-3 mt-2 c-light-text helvetica-55 col-md-10 col-12 px-0">პირველ ადგილზე გასული 
+                                მიიღებს უფასო კურსს.</span>
+
+                        </div>
                     </div>
                 </div>
             </div>
