--- a/test-scss/career.html
+++ b/test-scss/career.html
@@ -147,28 +147,21 @@
             <nav class="nav-header overflow-auto">
                 <ul class="d-flex align-items-center">
                     <li class="list mr-4 d-flex align-items-center">
-                        <a href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">პაკეტები</a>
+                        <a href="about-us.html"
+                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">ჩვენ
+                            შესახებ</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">ფასდაკლებები</a>
+                        <a href="mediakit.html"
+                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">მედიაკიტი</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
+                        <a href="career.html"
+                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">კარიერა</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
-                    </li>
-                    <li class="list mr-4 d-flex align-items-center">
-                        <a href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
-                    </li>
-                    <li class="list mr-4 d-flex align-items-center">
-                        <a href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
+                        <a href="contact.html"
+                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">კონტაქტი</a>
                     </li>
                 </ul>
             </nav>
@@ -240,7 +233,7 @@
                 <div class="w-100 d-flex justify-content-end px-4">
                     <a type="button" class="filter-drop c-black" data-toggle="collapse" data-target="#demo">ფილტრები</a>
                 </div>
-                <div class="d-flex filter__block flex-column px-4 bc-gray-light collapse mt-3" id="demo">
+                <div class="d-flex filter__block_career flex-column px-4 bc-gray-light collapse mt-3" id="demo">
                     <div class="pt-4">
                         <span class="f-13 c-black helvetica-75 d-block mb-2 py-md-3 br-8">ძიება</span>
                         <div class="search-input-parent ">
@@ -283,7 +276,7 @@
                     <div>
                         <div class="mt-3 pb-4">
                             <span class="f-13 c-black helvetica-75 d-block mb-2">ადგილი</span>
-    
+
                             <input class="input w-100 border-0" type="text" placeholder="შეიყვანე ადგილი...">
                         </div>
                     </div>
