--- a/test-scss/contact.html
+++ b/test-scss/contact.html
@@ -147,28 +147,20 @@
             <nav class="nav-header overflow-auto">
                 <ul class="d-flex align-items-center">
                     <li class="list mr-4 d-flex align-items-center">
-                        <a href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">პაკეტები</a>
+                        <a href="about-us.html"
+                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">ჩვენ შესახებ</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">ფასდაკლებები</a>
+                        <a href="mediakit.html"
+                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">მედიაკიტი</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
+                        <a href="career.html"
+                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">კარიერა</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
-                    </li>
-                    <li class="list mr-4 d-flex align-items-center">
-                        <a href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
-                    </li>
-                    <li class="list mr-4 d-flex align-items-center">
-                        <a href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
+                        <a href="contact.html"
+                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">კონტაქტი</a>
                     </li>
                 </ul>
             </nav>
