--- a/test-scss/courses.html
+++ b/test-scss/courses.html
@@ -176,15 +176,15 @@
             <a type="button" class="filter-drop f-14 helvetica-55 keep-all" data-toggle="collapse" data-target="#demo">ფილტრები</a>
 
         </div>
-        <div class="d-flex justify-content-between flex-wrap center filter__block collapse mt-3" id="demo">
-            <div class="col-12 col-sm-6 col-md-3 pl-0 pr-0 pr-sm-2 pr-md-3 mt-3">
+        <div class="center filter__block collapse mt-3" id="demo">
+            <div class="col-12 pl-0 pr-0 mt-3">
                 <span class="f-13 c-black helvetica-75 d-block mb-2">პროგრამა</span>
                 <div class="search-input-parent ">
                     <input class="search-input filter-responsive w-100 hover-bc-white bc-gray-light" type="text">
                 </div>
             </div>
 
-            <div class="drop-parent col-12 col-sm-6 col-md-3 pr-md-3 pl-0 pl-md-3 pr-0 mt-3">
+            <div class="drop-parent col-12 pl-0 pr-0 mt-3">
                 <span class="f-13 c-black helvetica-75 d-block mb-2">სკოლა</span>
                 <div class=" dropdown-toggle w-100 filter-responsive drop d-flex align-items-center justify-content-between bc-gray-light" type="button"
                     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -215,7 +215,7 @@
                     </div>
                 </div>
             </div>
-            <div class="drop-parent col-12 col-sm-6 col-md-3 pl-md-3 pl-0 pr-0 pr-sm-2 mt-3">
+            <div class="drop-parent col-12 pl-0 pr-0 mt-3">
                 <span class="f-13 c-black helvetica-75 d-block mb-2">დონე</span>
 
                 <div class=" dropdown-toggle filter-responsive w-100 drop d-flex align-items-center justify-content-between bc-gray-light" type="button"
@@ -248,7 +248,7 @@
                 </div>
             </div>
 
-            <div class="drop-parent col-12 col-sm-6 col-md-3 pr-0 pl-0 pl-md-3 mt-3">
+            <div class="drop-parent col-12 pr-0 pl-0 mt-3">
                 <span class="f-13 c-black helvetica-75 d-block mb-2">პროგრამა</span>
 
                 <div class=" dropdown-toggle filter-responsive w-100 drop d-flex align-items-center justify-content-between bc-gray-light" type="button"
