--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -53,7 +53,7 @@
                     <li class="list mr-4 d-flex align-items-center">
                         <a href="masterclass.html"
                             class="nav__a c-light-text c-hover-blue transition helvetica-75">მასტერკლასები
-                            <span class="drop__icon d-flex ml-2">
+                            <!-- <span class="drop__icon d-flex ml-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="6" height="10.688"
                                     viewBox="0 0 6 10.688">
                                     <path id="Path_932" class="path" data-name="Path 932"
@@ -61,7 +61,7 @@
                                         transform="translate(187.886 334.688) rotate(180)" fill="#9E9E9E"
                                         fill-rule="evenodd" />
                                 </svg>
-                            </span>
+                            </span> -->
                         </a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
@@ -70,7 +70,7 @@
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
                         <a href="vlog.html" class="nav__a c-light-text c-hover-blue transition helvetica-75">ბლოგი
-                            <span class="drop__icon d-flex ml-2">
+                            <!-- <span class="drop__icon d-flex ml-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="6" height="10.688"
                                     viewBox="0 0 6 10.688">
                                     <path id="Path_932" class="path" data-name="Path 932"
@@ -78,11 +78,11 @@
                                         transform="translate(187.886 334.688) rotate(180)" fill="#9E9E9E"
                                         fill-rule="evenodd" />
                                 </svg>
-                            </span>
+                            </span> -->
                         </a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a href="" class="nav__a c-light-text c-hover-blue transition helvetica-75">ჩვენ შესახებ</a>
+                        <a href="about-us.html" class="nav__a c-light-text c-hover-blue transition helvetica-75">ჩვენ შესახებ</a>
                     </li>
                 </ul>
                 <ul class="ul right_ul d-flex align-items-center">
@@ -550,7 +550,7 @@
             </div>
         </div>
     </section>
-    <section class="student__works py-60 bc-banner">
+    <section class="student__works py-60 bc-banner block__section">
         <div class="scroll-center d-flex flex-column align-items-center">
 
             <h1 class="f-30 mb-2 helvetica-75 c-black text-center">სტუდენტების ნამუშევრები</h1>
