--- a/test-scss/mediakit.html
+++ b/test-scss/mediakit.html
@@ -141,21 +141,25 @@
             </div>
         </div>
     </header>
-    <section class="mini__header border-bottom d-none d-md-flex">
-        <div class="center">
-            <nav style="height: 60px;" class="nav-header">
+    <section class="mini__header border-bottom d-md-flex">
+        <div class="d-flex justify-content-center w-100">
+            <nav class="nav-header overflow-auto">
                 <ul class="d-flex align-items-center">
                     <li class="list mr-4 d-flex align-items-center">
-                        <a style="height: 60px;" href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75">პაკეტები</a>
+                        <a href="about-us.html"
+                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">ჩვენ შესახებ</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a style="height: 60px;" href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75">ფასდაკლებები</a>
+                        <a href="mediakit.html"
+                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">მედიაკიტი</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a style="height: 60px;" href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75">კონკუსრები</a>
+                        <a href="career.html"
+                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">კარიერა</a>
+                    </li>
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a href="contact.html"
+                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">კონტაქტი</a>
                     </li>
                 </ul>
             </nav>
