--- a/test-scss/vlog.html
+++ b/test-scss/vlog.html
@@ -159,8 +159,8 @@
             <a class="filter-a f-14 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
                 aria-controls="nav-contact" aria-selected="false">სქრინშოტი</a>
         </div>
-        <div class="drop-parent col-12 col-sm-6 col-md-3 mt-3 d-block d-md-none">
-            <div class=" dropdown-toggle w-100 drop d-flex align-items-center justify-content-between" type="button"
+        <div class="drop-parent col-12 col-sm-6 col-md-3 mt-3 d-block d-md-none px-0">
+            <div class=" dropdown-toggle border w-100 drop d-flex align-items-center justify-content-between" type="button"
                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span>
                     ნებისმიერი
@@ -193,27 +193,24 @@
 
     </div>
 
-    <section class="popular__courses">
+    <section class=" py-md-3 py-2 mt-md-1">
         <div class="center">
             <div class="d-flex justify-content-between flex-wrap main courses__main row master-class">
-                <!-- for sale overlay add sale class to  block -->
                 <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
-                            <!-- <div class="img-block d-flex align-items-center"> -->
                                 <img class="w-100" src="./img/car.svg" alt="">
-                            <!-- </div> -->
-                            <!-- <img src="./img/face.svg" alt=""> -->
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
-                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
-                                <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                            <div class="d-flex- flex-column px-4 mx-1 mb-md-3 mb-2">
+                                <h1 class="f-16 mt-1 c-black helvetica-75">ციფრული მარკეტინგის 
+                                    ბენეფიტები მცირე ბიზნესისთვის </h1>
+                                <span class="f-14 d-block mt-md-3 mt-2 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
-                                <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
+                                <span class="f-14 c-light-text d-none d-md-flex mt-3 helvetica-55">22 ივლისი, 2019</span>
 
                             </div>
                         </div>
@@ -223,129 +220,131 @@
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
-                            <!-- <div class="img-block d-flex align-items-center"> -->
                                 <img class="w-100" src="./img/car.svg" alt="">
-                            <!-- </div> -->
-                            <!-- <img src="./img/face.svg" alt=""> -->
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
-                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
-                                <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                            <div class="d-flex- flex-column px-4 mx-1 mb-md-3 mb-2">
+                                <h1 class="f-16 mt-1 c-black helvetica-75">ციფრული მარკეტინგის 
+                                    ბენეფიტები მცირე ბიზნესისთვის </h1>
+                                <span class="f-14 d-block mt-md-3 mt-2 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
-                                <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
+                                <span class="f-14 c-light-text d-none d-md-flex mt-3 helvetica-55">22 ივლისი, 2019</span>
 
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
-                            <!-- <div class="img-block d-flex align-items-center"> -->
                                 <img class="w-100" src="./img/car.svg" alt="">
-                            <!-- </div> -->
-                            <!-- <img src="./img/face.svg" alt=""> -->
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
-                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
-                                <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                            <div class="d-flex- flex-column px-4 mx-1 mb-md-3 mb-2">
+                                <h1 class="f-16 mt-1 c-black helvetica-75">ციფრული მარკეტინგის 
+                                    ბენეფიტები მცირე ბიზნესისთვის </h1>
+                                <span class="f-14 d-block mt-md-3 mt-2 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
-                                <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
+                                <span class="f-14 c-light-text d-none d-md-flex mt-3 helvetica-55">22 ივლისი, 2019</span>
 
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
-                            <!-- <div class="img-block d-flex align-items-center"> -->
                                 <img class="w-100" src="./img/car.svg" alt="">
-                            <!-- </div> -->
-                            <!-- <img src="./img/face.svg" alt=""> -->
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
-                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
-                                <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                            <div class="d-flex- flex-column px-4 mx-1 mb-md-3 mb-2">
+                                <h1 class="f-16 mt-1 c-black helvetica-75">ციფრული მარკეტინგის 
+                                    ბენეფიტები მცირე ბიზნესისთვის </h1>
+                                <span class="f-14 d-block mt-md-3 mt-2 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
-                                <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
+                                <span class="f-14 c-light-text d-none d-md-flex mt-3 helvetica-55">22 ივლისი, 2019</span>
 
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
-                            <!-- <div class="img-block d-flex align-items-center"> -->
                                 <img class="w-100" src="./img/car.svg" alt="">
-                            <!-- </div> -->
-                            <!-- <img src="./img/face.svg" alt=""> -->
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
-                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
-                                <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                            <div class="d-flex- flex-column px-4 mx-1 mb-md-3 mb-2">
+                                <h1 class="f-16 mt-1 c-black helvetica-75">ციფრული მარკეტინგის 
+                                    ბენეფიტები მცირე ბიზნესისთვის </h1>
+                                <span class="f-14 d-block mt-md-3 mt-2 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
-                                <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
+                                <span class="f-14 c-light-text d-none d-md-flex mt-3 helvetica-55">22 ივლისი, 2019</span>
 
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
-                            <!-- <div class="img-block d-flex align-items-center"> -->
                                 <img class="w-100" src="./img/car.svg" alt="">
-                            <!-- </div> -->
-                            <!-- <img src="./img/face.svg" alt=""> -->
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
-                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
-                                <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                            <div class="d-flex- flex-column px-4 mx-1 mb-md-3 mb-2">
+                                <h1 class="f-16 mt-1 c-black helvetica-75">ციფრული მარკეტინგის 
+                                    ბენეფიტები მცირე ბიზნესისთვის </h1>
+                                <span class="f-14 d-block mt-md-3 mt-2 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
-                                <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
+                                <span class="f-14 c-light-text d-none d-md-flex mt-3 helvetica-55">22 ივლისი, 2019</span>
 
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
                         <div class="up__side d-flex align-items-start overflow-hidden ">
-                            <!-- <div class="img-block d-flex align-items-center"> -->
                                 <img class="w-100" src="./img/car.svg" alt="">
-                            <!-- </div> -->
-                            <!-- <img src="./img/face.svg" alt=""> -->
                         </div>
-                        <div class="down__side py-3">
+                        <div class="down__side py-md-3 py-2">
 
-                            <div class="d-flex- flex-column px-4 mx-1 mb-3">
-                                <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                            <div class="d-flex- flex-column px-4 mx-1 mb-md-3 mb-2">
+                                <h1 class="f-16 mt-1 c-black helvetica-75">ციფრული მარკეტინგის 
+                                    ბენეფიტები მცირე ბიზნესისთვის </h1>
+                                <span class="f-14 d-block mt-md-3 mt-2 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
-                                <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
+                                <span class="f-14 c-light-text d-none d-md-flex mt-3 helvetica-55">22 ივლისი, 2019</span>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                    <div class="d-flex flex-column inside__block">
+
+                        <div class="up__side d-flex align-items-start overflow-hidden ">
+                                <img class="w-100" src="./img/car.svg" alt="">
+                        </div>
+                        <div class="down__side py-md-3 py-2">
+
+                            <div class="d-flex- flex-column px-4 mx-1 mb-md-3 mb-2">
+                                <h1 class="f-16 mt-1 c-black helvetica-75">ციფრული მარკეტინგის 
+                                    ბენეფიტები მცირე ბიზნესისთვის </h1>
+                                <span class="f-14 d-block mt-md-3 mt-2 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                                    შესაძლებელობა მომცა, რომ ქადა ორი 
+                                    ხელით მეჭამა.</span>
+                                <span class="f-14 c-light-text d-none d-md-flex mt-3 helvetica-55">22 ივლისი, 2019</span>
 
                             </div>
                         </div>
